# Chengus

./: .gitignore  CMakeLists.txt  file.txt
C/include/: asciiHelper.c  asciiHelper.h  boardLib.c  boardLib.h  engine.c  engine.h  pieceLib.c  pieceLib.h  typedefs.h
C/src/: driver.c
docs/: EvaluationConsiderations.txt  Overview.md  considerations.txt  thingsToRemember
include/: CMakelists.txt  asciiHelper.c  asciiHelper.h  boardLib.c  boardLib.h  engine.c  pieceLib.c  pieceLib.h  typedefs.h
src/: driver.c
